--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,19 +3,25 @@ name: Android CI
 on:
   workflow_dispatch:
   push:
-    branches: ["main"]
+    branches: [ main ]
+    paths-ignore:
+      - '**.md'
+
+env:
+  BUILD_TOOLS_VERSION: 35.0.0
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: set up JDK 11
-        uses: actions/setup-java@v3
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
-          java-version: "11"
-          distribution: "temurin"
+          java-version: '21'
+          distribution: 'temurin'
           cache: gradle
 
       - name: Grant execute permission for gradlew
@@ -43,8 +49,8 @@ jobs:
       - name: Rename
         run: mv ${{ github.workspace }}/app/build/outputs/apk/release/app-release-unsigned.apk ${{ github.workspace }}/app/build/outputs/apk/release/FakeScreen-${{ env.VERSION_NAME }}.apk
 
-      - name: Upload built apk
-        uses: actions/upload-artifact@v3
+      - name: Upload Release APK
+        uses: actions/upload-artifact@v4
         with:
           name: release
           path: ${{ github.workspace }}/app/build/outputs/apk/release/FakeScreen-${{ env.VERSION_NAME }}.apk
