--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,27 +1,24 @@
 import java.text.SimpleDateFormat
 
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id "com.android.application"
+    id "org.jetbrains.kotlin.android"
 }
 
 android {
-    namespace 'me.neversleep.plusplus'
-    compileSdk 34
-
     defaultConfig {
         applicationId "me.neversleep.plusplus"
-        minSdk 21
-        targetSdk 34
-        versionCode 17
-        versionName "1.7.2"
+        targetSdkVersion 35
+        compileSdk 35
+        minSdkVersion 26
+        versionCode 18
+        versionName "1.8.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
         }
     }
-
     applicationVariants.all { variant ->
         variant.outputs.all { output ->
             if (variant.buildType.name == 'release') {
@@ -31,25 +28,22 @@ android {
             }
         }
     }
-
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
     }
+    namespace "me.neversleep.plusplus"
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = "1.8"
     }
     buildFeatures {
         buildConfig = true
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion '1.4.3'
     }
     packaging {
         resources {
@@ -57,12 +51,10 @@ android {
         }
     }
 }
-
 dependencies {
-
     testImplementation 'junit:junit:4.13.2'
     compileOnly "de.robv.android.xposed:api:82"
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
+    implementation 'com.google.android.material:material:1.13.0'
 }
