--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,55 +1,39 @@
 import java.text.SimpleDateFormat
 
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id "com.android.application"
 }
 
 android {
-    namespace 'me.neversleep.plusplus'
-    compileSdk 34
+    namespace "me.neversleep.plusplus"
+    compileSdk 35
 
     defaultConfig {
         applicationId "me.neversleep.plusplus"
-        minSdk 21
-        targetSdk 34
-        versionCode 17
-        versionName "1.7.2"
+        targetSdkVersion 35
+        minSdkVersion 26
+        versionCode 18
+        versionName "1.8.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables {
-            useSupportLibrary true
-        }
     }
-
-    applicationVariants.all { variant ->
-        variant.outputs.all { output ->
-            if (variant.buildType.name == 'release') {
-                def timeStamp = new SimpleDateFormat("yyyyMMdd_HHmmss").format(new Date())
-                def fileName = "${defaultConfig.versionName}_${timeStamp}_release.apk"
-                outputFileName = fileName
-            }
-        }
-    }
-
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_21
+        targetCompatibility = JavaVersion.VERSION_21
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+        kotlinOptions {
+            jvmTarget = "21"
+        }
     }
     buildFeatures {
         buildConfig = true
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion '1.4.3'
     }
     packaging {
         resources {
@@ -57,12 +41,20 @@ android {
         }
     }
 }
-
+androidComponents {
+    onVariants(selector().all(), { variant ->
+        variant.outputs.each { output ->
+            def timeStamp = new SimpleDateFormat("yyyyMMdd_HHmmss").format(new Date())
+            def vName = variant.outputs.first().versionName.getOrElse(android.defaultConfig.versionName)
+            def newName = "FakeScreen_${vName}_${timeStamp}_release.apk"
+            output.outputFileName.set(newName)
+        }
+    })
+}
 dependencies {
-
     testImplementation 'junit:junit:4.13.2'
     compileOnly "de.robv.android.xposed:api:82"
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
+    implementation 'com.google.android.material:material:1.13.0'
 }
